--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "recyclerlistview",
-  "version": "1.0.0-alpha",
+  "name": "tabview",
+  "version": "1.0.0",
   "description": "The listview that you need and deserve",
   "main": "index.js",
   "scripts": {
@@ -15,7 +15,7 @@
   "bugs": {
     "url": "https://github.com/Flipkart/ReactEssentials/issues"
   },
-  "homepage": "https://github.com/Flipkart/ReactEssentials/tree/recyclerlistview-v1.0-alpha#readme",
+  "homepage": "https://github.com/Flipkart/ReactEssentials/tree/tabview#readme",
   "dependencies": {
     "lodash": "4.17.4",
     "prop-types": "15.5.8"
