--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "recyclerlistview",
+  "name": "@wavyapp/recyclerlistview",
   "version": "1.1.5",
   "description": "The listview that you need and deserve. It was built for performance, uses cell recycling to achieve smooth scrolling.",
   "main": "dist/reactnative/index.js",
